--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: python
-install: "pip install pylint && pip install -r requirements.txt"
+install: "pip install pylint"
 script: "pylint ./*/lib/*.py"
