--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: python
 install: "pip install pylint"
-script: "pylint ./*/lib/*.py"
+script: "pylint --disable=import-error,fixme ./*/lib/*.py"
